Fixes points value overflowing and being off-center
Tweaks the flexbox CSS values in .header_container and .points_container to make sure the points value and points container are correctly centered vertically.

--- a/src/styles/40k-10e.less
+++ b/src/styles/40k-10e.less
@@ -298,7 +298,7 @@
       .header_container {
         grid-area: c1;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         justify-content: space-between;
         padding-top: 32px;
         padding-left: 32px;
@@ -331,8 +331,8 @@
 
         .points_container {
           display: flex;
-          align-items: "flex-start";
-          justify-content: flex-end;
+          align-items: center;
+          justify-content: center;
           padding-right: 16px;
           z-index: 2;
           padding-top: 4px;
